# membership-inference-defense

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/mid/: __init__.py  cli.py  fingerprint.py  inference.py  report.py  watermark.py
tests/: test_fingerprint_report.py  test_inference.py  test_watermark.py
