[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "membership-inference-defense"
version = "0.1.0"
description = "Forensic toolkit for detecting if proprietary data was used to train AI models"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "Phoenix Assistant"}]
keywords = ["machine-learning", "privacy", "membership-inference", "watermarking", "forensics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.2",
    "click>=8.1",
    "jinja2>=3.1",
    "rich>=13.0",
]

[project.optional-dependencies]
pdf = ["weasyprint>=60"]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

[project.scripts]
mid = "mid.cli:cli"

[project.urls]
Homepage = "https://github.com/phoenix-assistant/membership-inference-defense"
Issues = "https://github.com/phoenix-assistant/membership-inference-defense/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
